# Wine-II

./: .vercelignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
data/: white_wines.csv
static/css/: ML_W_v5.css  ML_v4.css
templates/: index.html  machine_learning.html  machine_learning_worldwines.html
